refactor: Lotto 생성 역할 LottoFactory으로 변경